[gd_scene load_steps=19 format=2]

[ext_resource path="res://Racing/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Racing/Vehicles/Arche/car.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Racing/Player/HitDetector.gd" type="Script" id=3]
[ext_resource path="res://Racing/Player/LightSystem.gd" type="Script" id=4]
[ext_resource path="res://Racing/Player/Camera.gd" type="Script" id=5]
[ext_resource path="res://Racing/Player/GUI.gd" type="Script" id=6]
[ext_resource path="res://Shaders/pixellation.shader" type="Shader" id=7]
[ext_resource path="res://Utilities/CameraEnvironment.tres" type="Environment" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.63, 0.61, 1.36 )

[sub_resource type="ParticlesMaterial" id=2]
spread = 90.0
gravity = Vector3( 0, 3, 0 )
initial_velocity = 1.0
angular_velocity = -1.0

[sub_resource type="QuadMesh" id=3]
size = Vector2( 2, 2 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 2, 2 )

[sub_resource type="ParticlesMaterial" id=5]
gravity = Vector3( 0, 3, 0 )
initial_velocity = 1.0

[sub_resource type="QuadMesh" id=6]

[sub_resource type="ParticlesMaterial" id=7]
flag_align_y = true
spread = 100.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3.0
angle_random = 1.0

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
albedo_color = Color( 1, 0.890625, 0, 1 )

[sub_resource type="QuadMesh" id=9]
material = SubResource( 8 )
size = Vector2( 0.3, 2 )

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 7 )
shader_param/size_x = 0.003
shader_param/size_y = 0.003

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="CarMesh" type="MeshInstance" parent="."]
transform = Transform( -1.74846e-09, 0, -0.04, 0, 0.04, 0, 0.04, 0, -1.74846e-09, 0, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null

[node name="HitDetector" type="Area" parent="CarMesh" groups=[
"Player",
]]
transform = Transform( -1.09279e-06, 0, 25, 0, 25, 0, -25, 0, -1.09279e-06, 0, 0, 0 )
input_ray_pickable = false
angular_damp = 1.0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="CarMesh/HitDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.60187, -0.0329257 )
shape = SubResource( 1 )

[node name="LightSystem" type="Spatial" parent="CarMesh"]
transform = Transform( -1.09278e-06, 0, 25, 0, 25, 0, -25, 0, -1.09278e-06, 0, 0, 0 )
script = ExtResource( 4 )

[node name="LeftRearLight" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.544767, 0.50211, 1.38089 )
light_color = Color( 1, 0, 0, 1 )
omni_range = 1.0

[node name="LeftBrakeLight" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.544767, 0.50211, 1.38089 )
light_color = Color( 1, 0, 0, 1 )
omni_range = 2.0

[node name="LeftRearIndicator" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.544767, 0.603527, 1.38089 )
light_color = Color( 1, 0.632813, 0, 1 )
omni_range = 1.0

[node name="RightRearLight" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.562115, 0.50211, 1.38188 )
light_color = Color( 1, 0, 0, 1 )
omni_range = 1.0

[node name="RightBrakeLight" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.562115, 0.50211, 1.38188 )
light_color = Color( 1, 0, 0, 1 )
omni_range = 2.0

[node name="RightRearIndicator" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.562115, 0.60412, 1.38188 )
light_color = Color( 1, 0.631373, 0, 1 )
omni_range = 1.0

[node name="LeftHeadlight" type="SpotLight" parent="CarMesh/LightSystem"]
transform = Transform( 0.992546, 0.0211624, -0.120018, 0, 0.984808, 0.173648, 0.121869, -0.172354, 0.977467, -0.43987, 0.609821, -1.29567 )
light_color = Color( 1, 0.967652, 0.171875, 1 )
light_energy = 2.0
shadow_enabled = true
spot_range = 60.0
spot_attenuation = 0.5
spot_angle = 18.0
spot_angle_attenuation = 0.5

[node name="LeftHeadlightOmni" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.438211, 0.728316, -1.16102 )
light_color = Color( 1, 0.972549, 0.356863, 1 )
omni_range = 1.0

[node name="RightHeadlight" type="SpotLight" parent="CarMesh/LightSystem"]
transform = Transform( 0.992546, 0.0211624, -0.120018, 0, 0.984808, 0.173648, 0.121869, -0.172354, 0.977467, 0.43812, 0.609821, -1.29567 )
light_color = Color( 1, 0.967652, 0.171875, 1 )
light_energy = 2.0
shadow_enabled = true
spot_range = 60.0
spot_attenuation = 0.5
spot_angle = 18.0
spot_angle_attenuation = 0.5

[node name="RightHeadlightOmni" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.443833, 0.728316, -1.16102 )
light_color = Color( 1, 0.972549, 0.356863, 1 )
omni_range = 1.0

[node name="LeftFrontIndicator" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.600998, 0.631176, -1.09804 )
light_color = Color( 1, 0.631373, 0, 1 )
light_energy = 2.0
omni_range = 1.0

[node name="RightFrontIndicator" type="OmniLight" parent="CarMesh/LightSystem"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.568648, 0.631176, -1.09804 )
light_color = Color( 1, 0.631373, 0, 1 )
light_energy = 2.0
omni_range = 1.0

[node name="IndicatorTimer" type="Timer" parent="CarMesh/LightSystem"]
wait_time = 0.5

[node name="RightTireSmoke" type="Particles" parent="CarMesh"]
transform = Transform( -1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, 33.7333, 8.80248, -12.5 )
emitting = false
amount = 10
lifetime = 2.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.2
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="LeftTireSmoke" type="Particles" parent="CarMesh"]
transform = Transform( -1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, 33.7333, 8.80248, 12.5 )
emitting = false
amount = 10
lifetime = 2.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.2
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="RightTireSmoke2" type="Particles" parent="CarMesh"]
transform = Transform( -1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, -13.7667, 1.30248, -15 )
emitting = false
amount = 10
lifetime = 2.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.2
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="LeftTireSmoke2" type="Particles" parent="CarMesh"]
transform = Transform( -1.09278e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09278e-07, -13.7667, 1.30248, 15 )
emitting = false
amount = 10
lifetime = 2.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.2
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 4 )

[node name="Exhaust" type="Particles" parent="CarMesh"]
transform = Transform( -1.09279e-07, 0, 2.5, 0, 2.5, 0, -2.5, 0, -1.09279e-07, 34.0845, 5.5724, 6.50635 )
amount = 3
process_material = SubResource( 5 )
draw_pass_1 = SubResource( 6 )

[node name="RightSparks" type="Particles" parent="CarMesh"]
transform = Transform( -2.18557e-07, -2.5, 4.33013, 0, 4.33013, 2.5, -5, 1.09278e-07, -1.89276e-07, -28.5316, 16.7753, -13.877 )
emitting = false
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 9 )

[node name="LeftSparks" type="Particles" parent="CarMesh"]
transform = Transform( -2.18557e-07, -2.5, 4.33013, 0, 4.33013, 2.5, -5, 1.09278e-07, -1.89275e-07, -28.5316, 16.7753, 15.128 )
emitting = false
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 9 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.933581, 0.358368, 0, -0.358368, 0.933581, 0, 4.65539, 4.88033 )
environment = ExtResource( 8 )
far = 200.0
script = ExtResource( 5 )

[node name="SkyboxContainer" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -3, 0 )

[node name="GUI" type="Control" parent="."]
rect_min_size = Vector2( 1024, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI"]
material = SubResource( 12 )
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerPanel" type="Panel" parent="GUI"]
anchor_left = 0.781
anchor_top = 0.933
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.255981
margin_top = 0.200012
margin_right = 0.463928
margin_bottom = -0.200012
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="GUI/TimerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="CarMesh/HitDetector" to="." method="_on_HitDetector_area_entered"]
[connection signal="timeout" from="CarMesh/LightSystem/IndicatorTimer" to="CarMesh/LightSystem" method="_on_IndicatorTimer_timeout"]
[connection signal="resized" from="GUI" to="GUI" method="_on_GUI_resized"]
